--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Maulana Kavaldo</h4>
               <p><em>
@@ -730,13 +730,14 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-data">Data</li>
-              <!-- <li data-filter=".filter-team">Team</li> -->
               <li data-filter=".filter-ml">Machine Learning</li>
               <li data-filter=".filter-cloud">Cloud Computing</li>
-              <li data-filter=".filter-web">Web</li>
-              <li data-filter=".filter-java">Java</li>
-              <li data-filter=".filter-android">Android</li>
+              <li data-filter=".filter-apps">Apps</li>
               <li data-filter=".filter-vix">Internship</li>
+              <!-- <li data-filter=".filter-team">Team</li> -->
+              <!-- <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-java">Java</li> -->
+              <!-- <li data-filter=".filter-android">Android</li> -->
             </ul>
           </div>
         </div>
@@ -984,7 +985,20 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/e-commerce-using-.net/index.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4> E-Commerce</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-e-commerce.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/web-system-recommendation/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -997,7 +1011,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/web-practical-work/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1010,7 +1024,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-java">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-java filter-apps">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java-movie-ticketing/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1023,7 +1037,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-java">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-java filter-apps">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java-library/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1037,7 +1051,7 @@
           </div>
 
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-android">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-android filter-apps">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/android-list-view/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1050,7 +1064,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-android">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-android filter-apps">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/android-book/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1063,7 +1077,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-android">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-android filter-apps">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/android-room-persistance/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
