--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,20 @@
 
         <div class="row galery-container" data-aos="fade-up" data-aos-delay="200">
 
-
+          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/coursera/ibm-da/IBM Data Analyst.png"
+                class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>IBM Data Analyst</h4>
+                <div class="portfolio-links">
+                  <a href="pages/gallery-coursera-ibm-da.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/coursera/gbi/Google Business Intelligence.png"
