--- a/index.html
+++ b/index.html
@@ -1178,6 +1178,22 @@
 
         <div class="row galery-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div id="aws-saa" class="col-lg-3 col-md-6 galery-item filter-cloud">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/aws/aws-saa.png" class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>AWS SAA</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/certif_licen/aws/aws-saa.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+
+                  <!-- <a href="pages/gallery-aws-saa.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/coursera/ibm-da/IBM Data Analyst.png"
