--- a/index.html
+++ b/index.html
@@ -1178,17 +1178,14 @@
 
         <div class="row galery-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div id="aws-saa" class="col-lg-3 col-md-6 galery-item filter-cloud">
+          <div id="aws" class="col-lg-3 col-md-6 galery-item filter-cloud">
             <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/aws/aws-saa.png" class="img-fluid img-responsive thumb" alt="">
+              <img src="assets/img/certif_licen/aws/aws.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
-                <h4>AWS SAA</h4>
+                <h4>AWS Certification</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/aws/aws-saa.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-
-                  <!-- <a href="pages/gallery-aws-saa.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
+                  <a href="pages/gallery-aws-certification.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1326,19 +1323,6 @@
                 <div class="portfolio-links">
                   <a href="assets/img/certif_licen/adse.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="aws-ccp" class="col-lg-3 col-md-6 galery-item filter-cloud">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/aws/aws-ccp.png" class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>AWS CCP</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-aws-ccp.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
