--- a/pages/gallery-aws-certification.html
+++ b/pages/gallery-aws-certification.html
@@ -89,10 +89,32 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/aws/restart-badge.png" class="img-fluid" alt="">
+              <img src="../assets/img/certif_licen/aws/aws-ccp-score-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/aws/restart-badge.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/certif_licen/aws/aws-ccp-score-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/aws/aws-ccp-score-2.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/aws/aws-ccp-score-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/aws/aws-saa.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/aws/aws-saa.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
