--- a/pages/gallery-aws-certification.html
+++ b/pages/gallery-aws-certification.html
@@ -98,7 +98,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/aws/aws-ccp-score-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -107,7 +107,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
@@ -131,7 +131,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/aws/aws-saa-score-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -140,7 +140,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
