--- a/pages/project-web-hc-system.html
+++ b/pages/project-web-hc-system.html
@@ -58,6 +58,14 @@
           <div class="col-lg-12">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/web-hc-system/Login.png"
+                    alt=""
+                  />
+                </div>
+
                 <div class="swiper-slide">
                   <img
                     src="../assets/img/portfolio/web-hc-system/Dashboard.png"
@@ -117,7 +125,7 @@
                   System
                 </li>
                 <li><strong>Category</strong> : Website, Administration</li>
-                <li><strong>Project date</strong> : October - Januari 2024</li>
+                <li><strong>Project date</strong> : October 2023 - Januari 2024</li>
                 <li>
                   <strong>Project URL</strong> :
                   <a href="https://github.com/maulanakavaldo/">Github</a>
