--- a/index.html
+++ b/index.html
@@ -889,6 +889,19 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/web-hc-system/hc-system.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4> HC System</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-web-hc-system.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Dr. Semmelweis and the Discovery of Handwashing.png"
