--- a/index.html
+++ b/index.html
@@ -902,6 +902,45 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/next-movie-db/the-movie-db.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>MovieDB</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-next-movie-db.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/react-simple-app/simple-app-react.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Simple App using React</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-react-simple-app.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/react-simple-app/simple-app-react.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Simple App using React</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-react-simple-app.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Dr. Semmelweis and the Discovery of Handwashing.png"
